--- a/searchpage/index.html
+++ b/searchpage/index.html
@@ -42,7 +42,7 @@
 
         <main>
             <div id="main-div">
-
+                <ul id="main-list"></ul>
             </div>
         </main>
 
@@ -62,6 +62,7 @@
             </div>
         </footer>
 
+        <script src="createCountryPanel.js"></script>
         <script src="sortCountriesNamesAlphabetically.js"></script>
         <script src="navButtonOnClick.js"></script>
         <script src="main.js"></script>
