--- a/searchpage/index.html
+++ b/searchpage/index.html
@@ -12,7 +12,6 @@
                 <button id="nav-button" class="nav-class">  = </button>
                 <h1 id="button-descr" class="nav-class"> Country List</h1>
                 <h1 id="country-heading" class="nav-class">Country</h1>
-                <input id="search-button"class="nav-class" placeholder="Search for an EXACT country!" ></button>
                 <h1 id="coupling-heading" class="nav-class">Coupling</h1>
                 <a id="home-link" class="nav-class" href="google.com">HOME</a>
             </div>
@@ -22,7 +21,7 @@
             <div id="header-div">
                 <h1 id="header-header" class="header-div">World Countries Coupled!</h1>
                 <h2 id="country-amount" class="header-div"> Currently, we have 250 countries!</h2>
-                <h3 id="search-criteria" class="header-div" >Your search criteria resulted in ... countries!</h3>
+                <h3 id="search-criteria" class="header-div" ></h3>
             </div>
         </header>
 
@@ -34,7 +33,7 @@
                 <button id="area"class="sort-critera">Area (meters)</button>
                 <button id="languages"class="sort-critera">Languages</button>
                 <button id="population"class="sort-critera">Population</button>
-                <button id="timezone" class="sort-critera">Gini</button>
+                <button id="gini" class="sort-critera">Gini</button>
                 <button id="scroll-to-data">To Graph...</button>
                 <button id="a-z">A-Z</button>
             </div>
@@ -62,9 +61,12 @@
             </div>
         </footer>
 
+        <script src="getPopulationByCountry.js"></script>
+        <script src="getCountryByGini.js"></script>
         <script src="changeCriteriaHeading.js"></script>
         <script src="formatNumberWithCommas.js"></script>
         <script src="formatLanguagesObjectToString.js"></script>
+        <script src="getLanguagesByCountry.js"></script>
         <script src="createCountryPanel.js"></script>
         <script src="getCountryByName.js"></script>
         <script src="sortCountriesNamesAlphabetically.js"></script>
