--- a/searchpage/index.html
+++ b/searchpage/index.html
@@ -60,8 +60,9 @@
 
             </div>
         </footer>
-
-        <script src="getPopulationByCountry.js"></script>
+        
+        <script src="getCountryByArea.js"></script>
+        <script src="getCountryByPopulation.js"></script>
         <script src="getCountryByGini.js"></script>
         <script src="changeCriteriaHeading.js"></script>
         <script src="formatNumberWithCommas.js"></script>
@@ -71,6 +72,7 @@
         <script src="getCountryByName.js"></script>
         <script src="sortCountriesNamesAlphabetically.js"></script>
         <script src="navButtonOnClick.js"></script>
+        <scirpt src="getCountryByRegion.js"> </scirpt>
         <script src="main.js"></script>
     </body>
 </html>
