--- a/searchpage/index.html
+++ b/searchpage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="icon" href="images/earth.png">
+        <link rel="icon" href="/images/images/earth.png">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <title> Country Search!</title>
     </head>
@@ -9,8 +9,9 @@
     <body>
         <nav>
             <div id="nav-div">
-                <button id="nav-button" class="nav-class">  = </button>
+                <button id="nav-button" class="nav-class"> = </button>
                 <h1 id="button-descr" class="nav-class"> Country List</h1>
+                <h1 id="slogan" class="nav-class"> --The definitive country wiki!--</h1>
                 <h1 id="country-heading" class="nav-class">Country</h1>
                 <h1 id="coupling-heading" class="nav-class">Coupling</h1>
                 <a id="home-link" class="nav-class" href="google.com">HOME</a>
@@ -35,7 +36,6 @@
                 <button id="population"class="sort-critera">Population</button>
                 <button id="gini" class="sort-critera">Gini</button>
                 <button id="scroll-to-data">To Graph...</button>
-                <button id="a-z">A-Z</button>
             </div>
         </section>
 
@@ -51,9 +51,11 @@
 
         <figure>
             <div id="figure-div">
+                <button id="to-top"> ^ Back to Top ^ </button>
                 <h1 id="graph-heading"> Countries Graph (Sorted by Criteria)</h1>
                 <table id="figure-table"></table>
             </div>
+        
         </figure>
 
         <footer>
