--- a/searchpage/index.html
+++ b/searchpage/index.html
@@ -14,7 +14,7 @@
                 <h1 id="slogan" class="nav-class"> --The definitive country wiki!--</h1>
                 <h1 id="country-heading" class="nav-class">Country</h1>
                 <h1 id="coupling-heading" class="nav-class">Coupling</h1>
-                <a id="home-link" class="nav-class" href="google.com">HOME</a>
+                <a id="home-link" class="nav-class" href="/homepage/index.html">HOME</a>
             </div>
         </nav>
 
@@ -22,7 +22,7 @@
             <div id="header-div">
                 <h1 id="header-header" class="header-div">World Countries Coupled!</h1>
                 <h2 id="country-amount" class="header-div"> Currently, we have 250 countries!</h2>
-                <h3 id="search-criteria" class="header-div" ></h3>
+                <h3 id="search-criteria" class="header-div" >Loading...</h3>
             </div>
         </header>
 
@@ -45,10 +45,6 @@
             </div>
         </main>
 
-        <section id="section-two">
-
-        </section>
-
         <figure>
             <div id="figure-div">
                 <button id="to-top"> ^ Back to Top ^ </button>
@@ -68,6 +64,7 @@
             </div>
         </footer>
 
+        <script src="updateOnApiError.js"></script>
         <script src="createTable.js"></script>
         <script src="getButton.js"></script>
         <script src="getCountryByArea.js"></script>
