--- a/searchpage/index.html
+++ b/searchpage/index.html
@@ -14,7 +14,7 @@
                 <h1 id="slogan" class="nav-class"> --The definitive country wiki!--</h1>
                 <h1 id="country-heading" class="nav-class">Country</h1>
                 <h1 id="coupling-heading" class="nav-class">Coupling</h1>
-                <a id="home-link" class="nav-class" href="'/code/countrycoupling/couplingcountries/homepage/index.html'">HOME</a>
+                <a id="home-link" class="nav-class" href="/code/countrycoupling/couplingcountries/homepage/index.html">HOME</a>
             </div>
         </nav>
 
