--- a/searchpage/index.html
+++ b/searchpage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="icon" href="/images/images/earth.png">
+        <link rel="icon" href="code/countrycoupling/couplingcountries/images/earth.png">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <title> Country Search!</title>
     </head>
