--- a/homepage/index.html
+++ b/homepage/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> Country Coupling - The definitive country wiki!</title>
-        <link rel="icon" href="code/countrycoupling/couplingcountries/images/earth.png">
+        <link rel="icon" href="../images/earth.png">
         <link rel="stylesheet" type="text/css" href="css/index.css"> 
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">       
